--- a/.env
+++ b/.env
@@ -1,24 +1,15 @@
-# CLIENT_HOST=http://localhost:30000
-# STAGE=prod
-# HOST=http://localhost:13370
-# GOOGLE_MAPS_API_KEY=AIzaSyDPlrTjD-2UknjUJ5DPMqjP28YjRdemZrI
-DATABASE_HOST="127.0.0.1"
+
+DATABASE_HOST="databse-j8hclr"
 DATABASE_PORT="33061"
 DATABASE_NAME="production"
 DATABASE_USERNAME="strapi"
 DATABASE_PASSWORD="strapi"
-# CRON=true
-# # WEBSOCKET_URL="backend-prod.autolectron.org"
-# WEBSOCKET_URL="localhost:13370"
-CLIENT_HOST=http://localhost:3000
+
+CLIENT_HOST=https://autolectron.org
 STAGE=prod
-HOST=http://localhost:13370
+HOST=https://autolectron.org
 GOOGLE_MAPS_API_KEY=AIzaSyDPlrTjD-2UknjUJ5DPMqjP28YjRdemZrI
-# DATABASE_HOST=“127.0.0.1”
-# DATABASE_PORT=“3306"
-# DATABASE_NAME=“autolectron_restore”
-# DATABASE_USERNAME=“root”
-# DATABASE_PASSWORD=
+
 CRON=true
-WEBSOCKET_URL="localhost:1337"
+WEBSOCKET_URL="autolectron.org"
 GOOGLE_MAPS_API_KEY=AIzaSyDPlrTjD-2UknjUJ5DPMqjP28YjRdemZrI
